--- a/styles.css
+++ b/styles.css
@@ -5,21 +5,66 @@ body,html{
 .container{
     height: 100%;
     display: grid;
-    grid-template-columns: 18fr 82fr;
+    grid-template-columns: minmax(200px, 18fr) 82fr;
     grid-template-rows: 18fr 82fr;
 
 }
 
 .side-bar{
-    background-color: rgb(187, 46, 46);
+    background-color: rgb(2, 144, 221);
     grid-area: 1/1/3/2;
+    color: aliceblue;
+    font-size: 23px;
+    display: grid;
+    grid-template-rows: 1fr 4fr 2fr 4fr;
+    align-items: center;
+    justify-content: center;
+}
+
+.dasboard_title{
+    font-size: 28px;
 }
 
 .header{
-    background-color: aqua;
+    background-color: whitesmoke;
+    display: grid;
+    grid-auto-flow: column;
+    grid-template-rows: 40fr 60fr;
+    gap: 10px;
+    padding: 10px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
 
 }
+.search_bar{
+    background-color: grey;
+    border-radius: 10px;
+    grid-column: 2/4;
+}
+
 
 .content{
-    background-color: blue;
+    background-color:rgb(163, 191, 199);
+    display: grid;
+    gap: 15px;
+    padding: 15px;
+    grid-template-columns: 7fr 3fr;
+}
+
+.your_projects{
+    grid-row: 1/3;  
+}
+
+.content_project_container{
+    display: grid;
+    grid-template-columns: repeat(auto-fit,minmax(280px,1fr)) ;
+    gap: 15px;
+    word-wrap: break-word;
+}
+
+.card{
+    background-color: white;
+    border: 4px solid transparent;
+    border-left-color: orange;
+    border-radius: 5px;
+    height: 150px;
 }
