adding card animation

--- a/styles.css
+++ b/styles.css
@@ -77,12 +77,32 @@ input{
 
 }
 
+.card:hover{
+  cursor: pointer;
+  scale: 1.009;
+  /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4); */
+  
+  transform: scale(1.05) translateY(-5px);
+    box-shadow: 0 0 20px 8px rgba(159, 178, 132, 0.6);
+    transition: .2s;
+
+}
+
 
   .setting-card, .dashboard_title{
     padding: 4px;
     display: flex;
     gap: 15px;
     align-items: center;
+  }
+  .setting-card:hover{
+    background-color:rgb(53, 0, 128) ;
+    cursor: pointer;
+    scale: 1.009;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.4);
+    transition: 1s;
+
+
   }
 
   svg {
